@@ -1,5 +1,5 @@
 ========================================================================
-3G-UMTS-TOOLS
+PLANETLAB-UMTS-TOOLS
 ========================================================================
 
 These tools give to users of a sliver the possibility to control a PPP
