@@ -1,8 +1,0 @@
-//#define DEBUG
-
-const char * ok="OK\n";
-const char * fail="Failed\n";
-
-const char * connected="Connected\n";
-const char * disconnected="Disconnected\n";
-const char * wrong_cmd="Wrong command\n";
